edit : project 7. Rodic Davidson - row-gap, column-gap 분기 & header fixed 지정 & 메뉴 margin-right 속성 수정

--- a/projects/rodic-davidson/src/scss/styles.scss
+++ b/projects/rodic-davidson/src/scss/styles.scss
@@ -31,38 +31,48 @@ body {
   }
 
   main {
+    margin-top: 55px;
     padding-right: 18px;
-    gap: 18px;
+    row-gap: 75px;
+    column-gap: 18px;
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 55px 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     header {
-      grid-column: 1 / 3;
-      grid-row: 1 / 2;
+      width: 100%;
+      background-color: white;
+      position: fixed;
+      top: 0;
+      height: 55px;
       padding: 20px 20px 20px 0;
       nav {
         ul {
           display: flex;
           & > li {
             font-weight: 200;
-            margin-right: 20px;
             font-size: 15px;
             &:hover {
               cursor: pointer;
               color: green;
             }
           }
+
+          & > li:not(:last-child) {
+            margin-right: 20px;
+          }
         }
       }
     }
     .text {
-      grid-column: 1 / 2;
-      grid-row: 2 / 3;
       .text__title {
         font-size: 15px;
         font-weight: 500;
         margin-top: 40px;
+      }
+
+      &:nth-child(2) {
+        grid-column: 1 / 2;
       }
 
       & > p {
@@ -84,7 +94,6 @@ body {
 
       &:last-child {
         grid-column: 2 / 3;
-        grid-row: 7 / 8;
         & > .text__title {
           margin-top: 0px;
         }
@@ -95,6 +104,11 @@ body {
         width: 100%;
         height: 90%;
         margin-bottom: 15px;
+      }
+      & > a > span {
+        display: inline-block;
+        height: 5%;
+        width: 100%;
       }
     }
     .image:nth-child(3) {
